[gd_scene load_steps=8 format=3 uid="uid://dlubrkcwvhs7i"]

[ext_resource type="Script" uid="uid://dawl48ax1ihgw" path="res://cenas/fases/fase_maedeouro/fase_5_maedeouro.gd" id="1_544e2"]
[ext_resource type="Texture2D" uid="uid://btimsgeplrhl7" path="res://cenas/fases/fase_maedeouro/assets/maedouro.jpg" id="2_ftvu1"]
[ext_resource type="PackedScene" uid="uid://ckn0vj1y6ktky" path="res://cenas/fases/fase_maedeouro/fogueira.tscn" id="3_ovyd5"]
[ext_resource type="FontFile" uid="uid://dcgork77dfg8o" path="res://cenas/fases/fase_curupira/resources/fontes/lemon_milk/LEMONMILK-Light.otf" id="5_kqf5a"]
[ext_resource type="AudioStream" uid="uid://ct0na5mo7k7df" path="res://cenas/fases/fase_maedeouro/musica/Loonboon-_128kbit_AAC_.mp3" id="6_yl8e6"]
[ext_resource type="PackedScene" uid="uid://citgv4fosqca8" path="res://cenas/fases/fase_maedeouro/enemy.tscn" id="12_uakdr"]

[sub_resource type="LabelSettings" id="LabelSettings_yl8e6"]
font = ExtResource("5_kqf5a")
font_size = 29

[node name="Fase5Maedeouro" type="Node2D" groups=["inimigos"]]
script = ExtResource("1_544e2")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_top = -2.0
offset_right = 768.0
offset_bottom = 386.0
texture = ExtResource("2_ftvu1")
expand_mode = 1

[node name="Fogueira" parent="." instance=ExtResource("3_ovyd5")]
position = Vector2(352, 280)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(552, 174)

[node name="Enemy" parent="." instance=ExtResource("12_uakdr")]
position = Vector2(824, 64)

[node name="TimerVitoria" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(384, 192)
zoom = Vector2(2.5, 2.79)

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "tempo restante: 0s"
label_settings = SubResource("LabelSettings_yl8e6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_yl8e6")
autoplay = true
parameters/looping = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Enemy" to="." method="_on_enemy_area_entered"]
[connection signal="timeout" from="TimerVitoria" to="." method="_on_timer_vitoria_timeout"]
